# address-matching-service

./: .gitignore  Makefile  README.md  configure  pyproject.toml
.github/workflows/: release.yml
config/: address-matching-service.env.example
include/: address_matcher.h
packaging/: address-matching-service.service.in
src/: address_matcher.c  main.c
src/address_matching/: __init__.py  components.py  engine.py  normalize.py  parser.py  scorer.py  strategies.py
tests/: test_engine.py  test_parser.py
