[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "address-matching-service"
version = "0.1.0"
description = "Shared address normalization and matching engine for City-Wide Property pipelines."
authors = [
    { name = "City-Wide Property Engineering" }
]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Proprietary" }
dependencies = [
    "pydantic>=2.6",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
llm = ["openai>=1.30"]

[project.urls]
homepage = "https://citywide.dev"
repository = "https://citywide.dev/address-matching-service"

[tool.setuptools.packages.find]
where = ["src"]
